--- a/hypr/.config/hypr/config/autostart.conf
+++ b/hypr/.config/hypr/config/autostart.conf
@@ -3,3 +3,4 @@ exec-once = waybar &
 exec-once = hyprpaper &
 exec-once = mako &
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24 
+exec-once = gsettings set org.gnome.desktop.wm.preferences button-layout ':'
