--- a/hypr/.config/hypr/config/devices.conf
+++ b/hypr/.config/hypr/config/devices.conf
@@ -6,23 +6,7 @@ monitor = ,1920x1080@144,auto,1.0
 # ──────────────────────────────
 # Device configurations
 # ──────────────────────────────
-device {
-    name = elan1203:00-04f3:307a-touchpad
-    natural_scroll = true
-}
-device {
-    name = beken-2.4g-wireless-device-1
+input {
     accel_profile = flat
-}
-device {
-    name = beken-2.4g-wireless-device-2
-    accel_profile = flat
-}
-device {
-    name = beken-usb-gaming-mouse-1
-    accel_profile = flat
-}
-device {
-    name = beken-usb-gaming-mouse-2
-    accel_profile = flat
+    force_no_accel = true
 }
