--- a/hypr/.config/hypr/config/env.conf
+++ b/hypr/.config/hypr/config/env.conf
@@ -1,5 +1,5 @@
 env = EDITOR,/usr/bin/nvim
 env = VISUAL,/usr/bin/nvim
-env = TERMINAL,/usr/bin/kitty
+env = TERMINAL,/usr/bin/foot
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = PATH,$PATH:/home/joaquin/.spicetify
