Completed the Foot configuration. Fairly easy, so to say.

--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -4,7 +4,7 @@
 $mainMod = SUPER
 $terminal = foot
 $fileManager = nemo
-$fileManager-alt = kitty -e yazi
+$fileManager-alt = foot -e lf
 $browser = zen-browser
 $menu = rofi -disable-history -show drun
 
