--- a/hypr/.config/hypr/config/style.conf
+++ b/hypr/.config/hypr/config/style.conf
@@ -31,7 +31,7 @@ general {
     gaps_in = 3
     gaps_out = 10
     col.active_border = rgb(eeeeee)
-    col.inactive_border = rgb(323232)
+    col.inactive_border = rgb(2b2b2c)
     border_size = 2
 }
 
