Changed foreground for Rofi and changed the xray values on .config/hypr/config/style.conf/

--- a/hypr/.config/hypr/config/style.conf
+++ b/hypr/.config/hypr/config/style.conf
@@ -21,7 +21,7 @@ layerrule = blur,logout_dialog
 layerrule = ignorealpha, rofi
 layerrule = ignorezero,notifications
 layerrule = xray 1, rofi
-windowrulev2 = xray 1, class:^(kitty)$
+windowrulev2 = xray 1, class:^(foot)$
 windowrulev2 = opacity 0.8, class:^(nemo)$
 
 # ──────────────────────────────
