Replaced my screenshot script with flameshot after finally getting it to work on wayland.

--- a/hypr/.config/hypr/config/style.conf
+++ b/hypr/.config/hypr/config/style.conf
@@ -14,6 +14,8 @@ decoration {
     rounding_power = 2.0
 }
 
+windowrulev2 = noanim, class:flameshot
+windowrulev2 = float, class:flameshot
 layerrule = blur,notifications
 layerrule = blur,rofi
 layerrule = blur,waybar
@@ -45,8 +47,8 @@ animations {
     bezier = winOut, 0.3, -0.3, 0, 1
     bezier = liner, 1, 1, 1, 1
     animation = windows, 1, 6, wind, slide
-    animation = windowsIn, 1, 5, winIn, slide
-    animation = windowsOut, 1, 5, winOut, slide
+    animation = windowsIn, 1, 3, default 
+    animation = windowsOut, 1, 5, default, slide
     animation = windowsMove, 1, 5, wind, slide
     animation = border, 1, 1, liner
     animation = borderangle, 1, 30, liner, once
