--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -76,7 +76,8 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod ALT, E, exec, $fileManager-alt
 bind = $mainMod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 1; }'
 bind = $mainMod, C, exec, hyprpicker
-bind = $mainMod SHIFT, S, exec, ~/.config/hypr/scripts/screenshot
+# bind = $mainMod SHIFT, S, exec, ~/.config/hypr/scripts/screenshot
+bind = $mainMod SHIFT, S, exec, flameshot gui
 bind = SUPER,F10,pass,^(com\.obsproject\.Studio)$
 
 # ──────────────────────────────
