Started using hyprshot.

--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -75,10 +75,8 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod ALT, E, exec, $fileManager-alt
 bind = $mainMod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 1; }'
-bind = $mainMod, C, exec, hyprpicker
-bind = $mainMod SHIFT, S, exec, ~/.config/hypr/scripts/screenshot && pkill -f screenshot
-# bind = $mainMod SHIFT, S, exec, flameshot gui
-bind = SUPER,F10,pass,^(com\.obsproject\.Studio)$
+bind = $mainMod SHIFT, C, exec, hyprpicker
+bind = $mainMod SHIFT, S, exec, hyprshot -o ~/Pictures/Hyprshots -m region -z
 
 # ──────────────────────────────
 # Window Movement & Resizing
