Very small changes.

--- a/hypr/.config/hypr/config/devices.conf
+++ b/hypr/.config/hypr/config/devices.conf
@@ -7,6 +7,9 @@ monitor = ,1920x1080@144,auto,1.0
 # Device configurations
 # ──────────────────────────────
 input {
+    touchpad {
+        natural_scroll = true
+    }
     accel_profile = flat
     force_no_accel = true
 }
