--- a/hypr/.config/hypr/config/style.conf
+++ b/hypr/.config/hypr/config/style.conf
@@ -43,15 +43,14 @@ general {
 animations {
     enabled = yes
     bezier = wind, 0.05, 0.9, 0.1, 1.05
-    bezier = winIn, 0.1, 1.1, 0.1, 1.1
     bezier = winOut, 0.3, -0.3, 0, 1
     bezier = liner, 1, 1, 1, 1
     animation = windows, 1, 6, wind, slide
-    animation = windowsIn, 1, 3, default 
-    animation = windowsOut, 1, 5, default, slide
+    animation = windowsIn, 1, 3, default
+    animation = windowsOut, 1, 5, winOut, slide
     animation = windowsMove, 1, 5, wind, slide
     animation = border, 1, 1, liner
     animation = borderangle, 1, 30, liner, once
     animation = fade, 1, 10, default
-    animation = workspaces, 0, 5, wind, slide
+    animation = workspaces, 1, 4, winOut, fade
 }
