Minor changes to waybar.

--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -76,7 +76,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod ALT, E, exec, $fileManager-alt
 bind = $mainMod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 1; }'
 bind = $mainMod SHIFT, C, exec, hyprpicker
-bind = $mainMod SHIFT, S, exec, hyprshot -o ~/Pictures/Hyprshots -m region -z
+bind = $mainMod SHIFT, S, exec, hyprshot -o ~/Pictures/Screenshots -m region -z
 
 # ──────────────────────────────
 # Window Movement & Resizing
