Added a dash separator on fastfetch

--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -69,7 +69,10 @@
             "type": "swap",
             "key": "swap  "
         },
-        "break",
+        {
+            "type": "custom",
+            "format": "───────────────"
+        },
         {
             "type": "colors",
             "symbol": "circle",
