Added more autostart stuff.

--- a/hypr/.config/hypr/config/autostart.conf
+++ b/hypr/.config/hypr/config/autostart.conf
@@ -1,6 +1,11 @@
+# Utilities
 exec-once = ~/.config/hypr/scripts/power_saver &
 exec-once = waybar &
 exec-once = hyprpaper &
 exec-once = mako &
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24 
 exec-once = gsettings set org.gnome.desktop.wm.preferences button-layout ':'
+
+# Make necessary theming directories
+exec-once = mkdir -p ~/.local/share/fonts
+exec-once = mkdir -p .themes
