Foot server added to startup as well as designated workspaces for certain applications.

--- a/hypr/.config/hypr/config/autostart.conf
+++ b/hypr/.config/hypr/config/autostart.conf
@@ -3,6 +3,7 @@ exec-once = ~/.config/hypr/scripts/power_saver &
 exec-once = waybar &
 exec-once = hyprpaper &
 exec-once = mako &
+exec-once = foot --server &
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24 
 exec-once = gsettings set org.gnome.desktop.wm.preferences button-layout ':'
 
