--- a/hypr/.config/hypr/config/env.conf
+++ b/hypr/.config/hypr/config/env.conf
@@ -1,3 +1,18 @@
+# Designated workspaces for applications
+windowrule = workspace 1 silent, class:^(alacritty)$
+windowrule = workspace 1 silent, class:^(kitty)$
+windowrule = workspace 1 silent, class:^(footclient)$
+windowrule = workspace 1 silent, class:^(ghostty)$
+windowrule = workspace 2 silent, class:^(zen)$
+windowrule = workspace 3 silent, class:^(vesktop)$
+windowrule = workspace 3 silent, class:^(Caprine)$
+windowrule = workspace 4 silent, class:^(Spotify)$
+windowrule = workspace 4 silent, class:^(com.obsproject.Studio)$
+windowrule = workspace 5 silent, class:^(steam)$
+windowrule = workspace 5 silent, class:^(org.vinegarhq.Sober)$
+windowrule = workspace 5 silent, class:^(io.mrarm.mcpelauncher-ui-qt)$
+
+# Environment variables
 env = EDITOR,/usr/bin/nvim
 env = VISUAL,/usr/bin/nvim
 env = TERMINAL,/usr/bin/foot
