--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -2,7 +2,7 @@
 #     DEFAULT PROGRAMS     #
 ############################
 $mainMod = SUPER
-$terminal = foot
+$terminal = footclient
 $fileManager = nemo
 $fileManager-alt = foot -e lf
 $browser = zen-browser
