Added some weird configuration to foot.

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -10,6 +10,9 @@ pad=5x5 center
 [main]
 gamma-correct-blending=no
 
+[scrollback]
+indicator-position = none
+
 # Colorscheme
 [colors]
 alpha = 0.8
