Modified lf a bit.

--- a/hypr/.config/hypr/config/env.conf
+++ b/hypr/.config/hypr/config/env.conf
@@ -6,6 +6,7 @@ windowrule = workspace 1 silent, class:^(ghostty)$
 windowrule = workspace 2 silent, class:^(zen)$
 windowrule = workspace 3 silent, class:^(vesktop)$
 windowrule = workspace 3 silent, class:^(Caprine)$
+windowrule = workspace 3 silent, class:^(chrome-messenger.com__login-Default)$
 windowrule = workspace 4 silent, class:^(Spotify)$
 windowrule = workspace 4 silent, class:^(com.obsproject.Studio)$
 windowrule = workspace 5 silent, class:^(steam)$
