--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -4,7 +4,7 @@
 $mainMod = SUPER
 $terminal = footclient
 $fileManager = nemo
-$fileManager-alt = foot -e lf
+$fileManager-alt = footclient -e lf
 $browser = zen-browser
 $menu = rofi -disable-history -show drun
 
@@ -73,7 +73,7 @@ bind = $mainMod SHIFT, j, movewindow, d
 # ──────────────────────────────
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod ALT, E, exec, $fileManager-alt
+bind = $mainMod, T, exec, $fileManager-alt
 bind = $mainMod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 1; }'
 bind = $mainMod SHIFT, C, exec, hyprpicker
 bind = $mainMod SHIFT, S, exec, hyprshot -o ~/Pictures/Screenshots -m region -z
