--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -13,6 +13,10 @@ gamma-correct-blending=no
 [scrollback]
 indicator-position = none
 
+[cursor]
+blink=yes
+blink-rate=500
+
 # Colorscheme
 [colors]
 alpha = 0.8
