--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -1,7 +1,7 @@
 ############################
 #     DEFAULT PROGRAMS     #
 ############################
-$mainMod = SUPER
+$mod = SUPER
 $terminal = footclient
 $fileManager = nemo
 $fileManager-alt = footclient -e lf
@@ -25,70 +25,69 @@ bind = SUPER, V, exec, cliphist list | rofi -dmenu -p "Clipboard history:" | cli
 # ──────────────────────────────
 # Workspace Management
 # ──────────────────────────────
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
+bind = $mod, 1, workspace, 1
+bind = $mod, 2, workspace, 2
+bind = $mod, 3, workspace, 3
+bind = $mod, 4, workspace, 4
+bind = $mod, 5, workspace, 5
+bind = $mod, 6, workspace, 6
+bind = $mod, 7, workspace, 7
+bind = $mod, 8, workspace, 8
+bind = $mod, 9, workspace, 9
+bind = $mod SHIFT, 1, movetoworkspace, 1
+bind = $mod SHIFT, 2, movetoworkspace, 2
+bind = $mod SHIFT, 3, movetoworkspace, 3
+bind = $mod SHIFT, 4, movetoworkspace, 4
+bind = $mod SHIFT, 5, movetoworkspace, 5
+bind = $mod SHIFT, 6, movetoworkspace, 6
+bind = $mod SHIFT, 7, movetoworkspace, 7
+bind = $mod SHIFT, 8, movetoworkspace, 8
+bind = $mod SHIFT, 9, movetoworkspace, 9
 
 # ──────────────────────────────
 # Window & Session Management
 # ──────────────────────────────
-bind = $mainMod, Q, killactive
-bind = $mainMod SHIFT, Q, exit
-bind = $mainMod SHIFT, SPACE, togglefloating
+bind = $mod, Q, killactive
+bind = $mod SHIFT, Q, exit
+bind = $mod SHIFT, SPACE, togglefloating
 bind = ALT, Return, fullscreen
-bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, SPACE, exec, $menu
-bind = $mainMod SHIFT, X, exec, hyprlock
+bind = $mod, RETURN, exec, $terminal
+bind = $mod, SPACE, exec, $menu
+bind = $mod SHIFT, X, exec, hyprlock
 
 # ──────────────────────────────
 # Window navigation 
 # ──────────────────────────────
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
-
-bind = $mainMod SHIFT, h, movewindow, l
-bind = $mainMod SHIFT, l, movewindow, r
-bind = $mainMod SHIFT, k, movewindow, u
-bind = $mainMod SHIFT, j, movewindow, d
+bind = $mod, h, movefocus, l
+bind = $mod, l, movefocus, r
+bind = $mod, k, movefocus, u
+bind = $mod, j, movefocus, d
+bind = $mod SHIFT, T, togglesplit
+bind = $mod SHIFT, h, movewindow, l
+bind = $mod SHIFT, l, movewindow, r
+bind = $mod SHIFT, k, movewindow, u
+bind = $mod SHIFT, j, movewindow, d
 
 # ──────────────────────────────
 # App Shortcuts
 # ──────────────────────────────
-bind = $mainMod, B, exec, $browser
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, T, exec, $fileManager-alt
-bind = $mainMod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 1; }'
-bind = $mainMod SHIFT, C, exec, hyprpicker
-bind = $mainMod SHIFT, S, exec, hyprshot -o ~/Pictures/Screenshots -m region -z
+bind = $mod, B, exec, $browser
+bind = $mod, E, exec, $fileManager
+bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 1; }'
+bind = $mod SHIFT, C, exec, hyprpicker
+bind = $mod SHIFT, S, exec, hyprshot -o ~/Pictures/Screenshots -m region -z
 
 # ──────────────────────────────
 # Window Movement & Resizing
 # ──────────────────────────────
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-bind = $mainMod ALT, H, resizeactive, -20 0
-bind = $mainMod ALT, J, resizeactive, 0 20
-bind = $mainMod ALT, K, resizeactive, 0 -20
-bind = $mainMod ALT, L, resizeactive, 20 0
+bindm = $mod, mouse:272, movewindow
+bindm = $mod, mouse:273, resizewindow
+bind = $mod ALT, H, resizeactive, -20 0
+bind = $mod ALT, J, resizeactive, 0 20
+bind = $mod ALT, K, resizeactive, 0 -20
+bind = $mod ALT, L, resizeactive, 20 0
 
 # ──────────────────────────────
 # System Utilities
 # ──────────────────────────────
-bind = $mainMod SHIFT, P, exec, wlogout
+bind = $mod SHIFT, P, exec, wlogout
