--- a/zsh/.config/zsh/prompt.toml
+++ b/zsh/.config/zsh/prompt.toml
@@ -3,12 +3,10 @@
 version = 3
 final_space = true
 
-[shell]
-disable_title = true
-
 [[blocks]]
 type = 'prompt'
 alignment = 'left'
+newline = true
 
 [[blocks.segments]]
 type = 'path'
