Renamed a couple of files.

--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -47,7 +47,7 @@ bind = $mod SHIFT, 9, movetoworkspace, 9
 # ──────────────────────────────
 # Window & Session Management
 # ──────────────────────────────
-bind = $mod, Q, killactive
+bind = $mod SHIFT, C, killactive
 bind = $mod SHIFT, Q, exit
 bind = $mod SHIFT, SPACE, togglefloating
 bind = ALT, Return, fullscreen
@@ -74,7 +74,7 @@ bind = $mod SHIFT, j, movewindow, d
 bind = $mod, B, exec, $browser
 bind = $mod, E, exec, $fileManager
 bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 1; }'
-bind = $mod SHIFT, C, exec, hyprpicker
+bind = $mod SHIFT, F, exec, hyprpicker
 bind = $mod SHIFT, S, exec, hyprshot -o ~/Pictures/Screenshots -m region -z
 
 # ──────────────────────────────
@@ -90,4 +90,4 @@ bind = $mod ALT, L, resizeactive, 20 0
 # ──────────────────────────────
 # System Utilities
 # ──────────────────────────────
-bind = $mod SHIFT, P, exec, wlogout
+bind = $mod SHIFT, D, exec, wlogout
