--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -16,6 +16,7 @@ indicator-position = none
 [cursor]
 blink=yes
 blink-rate=500
+underline-thickness=2px
 
 # Colorscheme
 [colors]
@@ -28,7 +29,7 @@ regular2 = 5f7a5f
 regular3 = a4965f
 regular4 = 5f7a8c
 regular5 = 75607a
-regular6 = 5f7a7f
+regular6 = 6a8b8b
 regular7 = eeeeee
 bright0 = 666666
 bright1 = 976061
