--- a/hypr/.config/hypr/config/rules.conf
+++ b/hypr/.config/hypr/config/rules.conf
@@ -8,10 +8,14 @@ windowrule = workspace 4 silent, class:^(com.obsproject.Studio)$
 windowrule = workspace 5 silent, class:^(steam)$
 windowrule = workspace 5 silent, class:^(org.vinegarhq.Sober)$
 windowrule = workspace 5 silent, class:^(io.mrarm.mcpelauncher-ui-qt)$
+windowrulev2 = noanim, class:flameshot
+windowrulev2 = float, class:flameshot
+layerrule = blur,notifications
+layerrule = blur,rofi
+layerrule = blur,logout_dialog
+layerrule = ignorealpha, rofi
+layerrule = ignorezero,notifications
+layerrule = xray 1, rofi
+windowrulev2 = xray 1, class:^(foot)$
+windowrulev2 = opacity 0.8, class:^(nemo)$
 
-# Environment variables
-env = EDITOR,/usr/bin/nvim
-env = VISUAL,/usr/bin/nvim
-env = TERMINAL,/usr/bin/foot
-env = QT_QPA_PLATFORMTHEME,qt6ct
-env = PATH,$PATH:/home/joaquin/.spicetify
