--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -23,7 +23,7 @@ underline-thickness=2px
 alpha = 0.8
 foreground = eeeeee
 background = 1c1c1c
-regular0 = 1c1c1c
+regular0 = 353535
 regular1 = 865054
 regular2 = 5f7a5f
 regular3 = a4965f
