--- a/hypr/.config/hypr/config/style.conf
+++ b/hypr/.config/hypr/config/style.conf
@@ -29,13 +29,13 @@ general {
 # Animations
 # ──────────────────────────────
 animations {
-    enabled = yes
+    enabled = true
     bezier = wind, 0.05, 0.9, 0.1, 1.05
     bezier = winIn, 0.1, 1.0, 0.1, 1.0
     bezier = winOut, 0.3, -0.3, 0, 1
     bezier = liner, 1, 1, 1, 1
     animation = windows, 1, 6, wind, slide
-    animation = windowsIn, 1, 6, winIn
+    animation = windowsIn, 1, 5, winIn
     animation = windowsOut, 1, 4, default, popin 80%
     animation = windowsMove, 1, 5, wind, slide
     animation = border, 1, 1, liner
