--- a/hypr/.config/hypr/config/style.conf
+++ b/hypr/.config/hypr/config/style.conf
@@ -41,6 +41,5 @@ animations {
     animation = border, 1, 1, liner
     animation = borderangle, 1, 30, liner, once
     animation = fade, 1, 10, default
-    animation = workspacesIn, 1, 12, winIn, fade
-    animation = workspacesOut, 1, 4, winOut, fade
+    animation = workspaces, 0, 0
 }
