--- a/hypr/.config/hypr/config/devices.conf
+++ b/hypr/.config/hypr/config/devices.conf
@@ -2,6 +2,7 @@
 # Monitor configuration
 # ──────────────────────────────
 monitor = ,1920x1080@144,auto,1.0
+exec-once = brightnessctl set 80%
 
 # ──────────────────────────────
 # Device configurations
