--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -1,6 +1,6 @@
 $accent = rgb(eeeeee)
 $accentAlpha = rgb(eeeeee)
-$font = Rubik
+$font = Roboto
 
 # GENERAL
 general {
@@ -20,7 +20,7 @@ label {
     monitor =
     text = cmd[update:30000] echo "$(date +"%I:%M %p")"
     color = $accent
-    font_size = 80
+    font_size = 60
     font_family = $font
     position = -27, 0
     halign = right
@@ -32,9 +32,9 @@ label {
     monitor = 
     text = cmd[update:43200000] echo "$(date +"%A, %d %B %Y")"
     color = $text
-    font_size = 25
+    font_size = 20
     font_family = $font
-    position = -30, -125
+    position = -30, -100
     halign = right
     valign = top
 }
