--- a/hypr/.config/hypr/config/rules.conf
+++ b/hypr/.config/hypr/config/rules.conf
@@ -16,6 +16,8 @@ layerrule = blur,logout_dialog
 layerrule = ignorealpha, rofi
 layerrule = ignorezero,notifications
 layerrule = xray 1, rofi
+windowrulev2 = xray 1, class:^(nemo)$
 windowrulev2 = xray 1, class:^(foot)$
+windowrulev2 = xray 1, class:^(footclient)$
 windowrulev2 = opacity 0.8, class:^(nemo)$
 
