Just very very small changes.

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -15,6 +15,7 @@
     "modules-right": [
         "tray",
         "network",
+        "bluetooth",
         "pulseaudio",
         "battery",
         "custom/space",
