--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -11,9 +11,9 @@ $menu = rofi -disable-history -show drun
 # ──────────────────────────────
 # Volume Control
 # ──────────────────────────────
-bind = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volume --inc
-bind = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volume --dec
-bind = , XF86AudioMute, exec, ~/.config/hypr/scripts/volume --toggle
+bind = , XF86AudioRaiseVolume, exec, ~/.config/scripts/volume --inc
+bind = , XF86AudioLowerVolume, exec, ~/.config/scripts/volume --dec
+bind = , XF86AudioMute, exec, ~/.config/scripts/volume --toggle
 
 # ──────────────────────────────
 # Clipboard history
