--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -2,7 +2,9 @@
     "include": "~/.config/waybar/modules.json",
     "layer": "top",
     "position": "top",
-    "height": 32,
+    "height": 36,
+    "width": 1900,
+    "margin": "8 0 0 0",
     "spacing": 4,
     "modules-left": [
         "clock",
@@ -14,11 +16,12 @@
     ],
     "modules-right": [
         "tray",
-        "network",
-        "bluetooth",
-        "pulseaudio",
-        "battery",
+        "group/system",
         "custom/space",
         "custom/power"
     ],
+    "group/system": {
+        "orientation": "horizontal",
+        "modules": [ "network", "bluetooth", "pulseaudio", "battery" ]
+    },
 }
