Reduced window outer window gaps to compensate for the larger waybar.

--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -50,6 +50,7 @@ bind = $mod SHIFT, 9, movetoworkspace, 9
 bind = $mod SHIFT, C, killactive
 bind = $mod SHIFT, Q, exit
 bind = $mod SHIFT, SPACE, togglefloating
+bind = $mod SHIFT, Space, resizeactive, exact 1280 720
 bind = ALT, Return, fullscreen
 bind = $mod, RETURN, exec, $terminal
 bind = $mod, SPACE, exec, $menu
@@ -90,4 +91,4 @@ bind = $mod ALT, L, resizeactive, 20 0
 # ──────────────────────────────
 # System Utilities
 # ──────────────────────────────
-bind = $mod SHIFT, D, exec, wlogout
+bind = $mod SHIFT, D, exec, ~/.config/scripts/power-menu
