--- a/hypr/.config/hypr/config/rules.conf
+++ b/hypr/.config/hypr/config/rules.conf
@@ -8,6 +8,8 @@ windowrule = workspace 4 silent, class:^(com.obsproject.Studio)$
 windowrule = workspace 5 silent, class:^(steam)$
 windowrule = workspace 5 silent, class:^(org.vinegarhq.Sober)$
 windowrule = workspace 5 silent, class:^(io.mrarm.mcpelauncher-ui-qt)$
+
+# Stylish window/layer rules
 windowrulev2 = noanim, class:flameshot
 windowrulev2 = float, class:flameshot
 layerrule = blur,notifications
@@ -20,4 +22,3 @@ windowrulev2 = xray 1, class:^(nemo)$
 windowrulev2 = xray 1, class:^(foot)$
 windowrulev2 = xray 1, class:^(footclient)$
 windowrulev2 = opacity 0.8, class:^(nemo)$
-
