--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -8,7 +8,7 @@
     "spacing": 4,
     "modules-left": [
         "clock",
-        "hyprland/workspaces"
+        "hyprland/workspaces",
     ],
     "modules-center": [
         "hyprland/window"
