Added some stuff.

--- a/hypr/.config/hypr/config/style.conf
+++ b/hypr/.config/hypr/config/style.conf
@@ -23,6 +23,11 @@ general {
     col.active_border = rgb(eeeeee)
     col.inactive_border = rgb(2b2b2c)
     border_size = 2
+    layout = dwindle
+}
+dwindle {
+    pseudotile = yes
+    preserve_split = yes
 }
 
 # ──────────────────────────────
@@ -41,5 +46,5 @@ animations {
     animation = border, 1, 1, liner
     animation = borderangle, 1, 30, liner, once
     animation = fade, 1, 10, default
-    animation = workspaces, 0, 0
+    animation = workspaces, 1, 4, winOut, fade
 }
