Added some stuff.

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -1,6 +1,6 @@
 $accent = rgb(eeeeee)
 $accentAlpha = rgb(eeeeee)
-$font = Roboto
+$font = JetBrainsMono Nerd Font Mono
 
 # GENERAL
 general {
@@ -18,9 +18,9 @@ background {
 # TIME
 label {
     monitor =
-    text = cmd[update:30000] echo "$(date +"%I:%M %p")"
+    text = $TIME12
     color = $accent
-    font_size = 60
+    font_size = 55
     font_family = $font
     position = -27, 0
     halign = right
@@ -30,11 +30,11 @@ label {
 # DATE 
 label {
     monitor = 
-    text = cmd[update:43200000] echo "$(date +"%A, %d %B %Y")"
+    text = cmd[update:1000] echo "$(date +"%A, %B %d, %Y")"
     color = $text
     font_size = 20
     font_family = $font
-    position = -30, -100
+    position = -30, -95
     halign = right
     valign = top
 }
@@ -75,4 +75,3 @@ input-field {
     halign = center
     valign = center
 }
-
