Fixed some stuff up.

--- a/hypr/.config/hypr/config/autostart.conf
+++ b/hypr/.config/hypr/config/autostart.conf
@@ -1,11 +1,15 @@
 # Utilities
-exec-once = ~/.config/scripts/power_saver &
-exec-once = waybar &
-exec-once = hyprpaper &
-exec-once = mako &
-exec-once = foot --server &
+exec-once = ~/.config/scripts/power-saver
+exec-once = waybar
+exec-once = hyprpaper
+exec-once = mako
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24 
 exec-once = gsettings set org.gnome.desktop.wm.preferences button-layout ':'
+
+# Startup applications
+exec-once = foot --server
+exec-once = vesktop
+exec-once = steam
 
 # Make necessary theming directories
 exec-once = mkdir -p ~/.local/share/fonts
