--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -76,6 +76,7 @@ bind = $mod, B, exec, $browser
 bind = $mod, E, exec, $fileManager
 bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 1; }'
 bind = $mod SHIFT, F, exec, hyprpicker
+bind = $mod, S, exec, hyprshot -o ~/Pictures/Screenshots -m output -z
 bind = $mod SHIFT, S, exec, hyprshot -o ~/Pictures/Screenshots -m region -z
 
 # ──────────────────────────────
