I have no idea what i am commiting and pushing right now.

--- a/hypr/.config/hypr/config/autostart.conf
+++ b/hypr/.config/hypr/config/autostart.conf
@@ -8,7 +8,7 @@ exec-once = gsettings set org.gnome.desktop.wm.preferences button-layout ':'
 
 # Startup applications
 exec-once = foot --server
-exec-once = vesktop
+exec-once = flatpak run dev.vencord.Vesktop
 exec-once = steam
 
 # Make necessary theming directories
