--- a/hypr/.config/hypr/config/style.conf
+++ b/hypr/.config/hypr/config/style.conf
@@ -45,6 +45,5 @@ animations {
     animation = windowsMove, 1, 5, wind, slide
     animation = border, 1, 1, liner
     animation = borderangle, 1, 30, liner, once
-    animation = fade, 1, 10, default
-    animation = workspaces, 0, 4, winOut, fade
+    animation = workspaces, 0, 0
 }
