--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -11,7 +11,7 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = ~/.config/hypr/wallpaper/moon.png
+    path = ~/Pictures/Wallpapers/moon.png
     blur_passes = 2
 }
 
@@ -30,7 +30,7 @@ label {
 # DATE 
 label {
     monitor = 
-    text = cmd[update:1000] echo "$(date +"%A, %B %d, %Y")"
+    text = cmd[update:43200000] date +"%A, %d %B %Y"
     color = $text
     font_size = 20
     font_family = $font
