--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/.config/hypr/wallpaper/moon.png
-wallpaper = , ~/.config/hypr/wallpaper/moon.png
+preload = ~/Pictures/Wallpapers/moon.png
+wallpaper = , ~/Pictures/Wallpapers/moon.png
