Re-arranged some stuff on the hypr configs.

--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -72,6 +72,7 @@ bind = $mod SHIFT, j, movewindow, d
 # ──────────────────────────────
 # App Shortcuts
 # ──────────────────────────────
+bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
 bind = $mod, B, exec, $browser
 bind = $mod, E, exec, $fileManager
 bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 1; }'
