Removed the modular zsh configurations.

--- a/hypr/.config/hypr/config/rules.conf
+++ b/hypr/.config/hypr/config/rules.conf
@@ -10,6 +10,8 @@ windowrule = workspace 5 silent, class:^(org.vinegarhq.Sober)$
 windowrule = workspace 5 silent, class:^(io.mrarm.mcpelauncher-ui-qt)$
 
 # Stylish window/layer rules
+windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = size 670 625,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = noanim, class:flameshot
 windowrulev2 = float, class:flameshot
 layerrule = blur,notifications
