--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -20,8 +20,8 @@ label {
     monitor =
     text = $TIME12
     color = $accent
-    font_size = 55
-    font_family = $font
+    font_size = 60
+    font_family = Rubik
     position = -27, 0
     halign = right
     valign = top
