--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,10 +5,11 @@ shell_integration no-title
 # Look and feel
 background_opacity 0.8
 cursor_blink_interval 0.5
+cursor_shape block
 erase_scrollback_on_clear yes
 tab_powerline_style round
 tab_bar_style powerline
-window_padding_width 2 3 3 3
+window_padding_width 4
 
 # Fonts
 font_size	              13.15
