I don't even know what i am commiting right now.

--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -94,3 +94,6 @@ bind = $mod ALT, L, resizeactive, 20 0
 # System Utilities
 # ──────────────────────────────
 bind = $mod SHIFT, D, exec, ~/.config/scripts/power-menu
+input {
+    kb_options = caps:escape
+}
