--- a/hypr/.config/hypr/config/style.conf
+++ b/hypr/.config/hypr/config/style.conf
@@ -40,8 +40,8 @@ animations {
     bezier = winOut, 0.3, -0.3, 0, 1
     bezier = liner, 1, 1, 1, 1
     animation = windows, 1, 6, wind, slide
-    animation = windowsIn, 1, 5, winIn
-    animation = windowsOut, 1, 3, default, popin 80%
+    animation = windowsIn, 1, 4, winIn
+    animation = windowsOut, 1, 3, winOut, popin 80%
     animation = windowsMove, 1, 5, wind, slide
     animation = border, 1, 1, liner
     animation = borderangle, 1, 30, liner, once
