Changed some stuff on neovim.

--- a/hypr/.config/hypr/config/rules.conf
+++ b/hypr/.config/hypr/config/rules.conf
@@ -11,7 +11,9 @@ windowrule = workspace 5 silent, class:^(io.mrarm.mcpelauncher-ui-qt)$
 
 # Stylish window/layer rules
 windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = float,class:^(swayimg)$
 windowrulev2 = size 670 625,class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = size 1280 720,class:^(swayimg)$
 windowrulev2 = noanim, class:flameshot
 windowrulev2 = float, class:flameshot
 layerrule = blur,notifications
