--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,5 +1,201 @@
-source = $HOME/.config/hypr/config/autostart.conf
-source = $HOME/.config/hypr/config/style.conf
-source = $HOME/.config/hypr/config/devices.conf
-source = $HOME/.config/hypr/config/rules.conf
-source = $HOME/.config/hypr/config/keybinds.conf
+# Utilities
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = gsettings set org.gnome.desktop.wm.preferences button-layout ':'
+exec-once = ~/.config/scripts/power-saver
+exec-once = hyprctl setcursor Bibata-Modern-Classic 24 
+
+# Startup applications
+exec-once = waybar
+exec-once = hyprpaper
+exec-once = mako
+exec-once = foot --server
+exec-once = mkdir -p ~/.local/share/fonts
+exec-once = mkdir -p .themes
+
+# ──────────────────────────────
+# Monitor configuration
+# ──────────────────────────────
+monitor = ,1920x1080@144,auto,1.0
+exec-once = brightnessctl set 80%
+
+# ──────────────────────────────
+# Device configurations
+# ──────────────────────────────
+input {
+    touchpad {
+        natural_scroll = true
+    }
+    accel_profile = flat
+    force_no_accel = true
+}
+
+############################
+#     DEFAULT PROGRAMS     #
+############################
+$mod = SUPER
+$terminal = footclient
+$fileManager = nemo
+$fileManager-alt = footclient -e lf
+$browser = zen-browser
+$menu = rofi -disable-history -show drun
+
+# ──────────────────────────────
+# Volume Control
+# ──────────────────────────────
+bind = , XF86AudioRaiseVolume, exec, ~/.config/scripts/volume --inc
+bind = , XF86AudioLowerVolume, exec, ~/.config/scripts/volume --dec
+bind = , XF86AudioMute, exec, ~/.config/scripts/volume --toggle
+
+# ──────────────────────────────
+# Clipboard history
+# ──────────────────────────────
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
+bind = SUPER, V, exec, cliphist list | rofi -dmenu -p "Clipboard history:" | cliphist decode | wl-copy
+
+# ──────────────────────────────
+# Workspace Management
+# ──────────────────────────────
+bind = $mod, 1, workspace, 1
+bind = $mod, 2, workspace, 2
+bind = $mod, 3, workspace, 3
+bind = $mod, 4, workspace, 4
+bind = $mod, 5, workspace, 5
+bind = $mod, 6, workspace, 6
+bind = $mod, 7, workspace, 7
+bind = $mod, 8, workspace, 8
+bind = $mod, 9, workspace, 9
+bind = $mod SHIFT, 1, movetoworkspace, 1
+bind = $mod SHIFT, 2, movetoworkspace, 2
+bind = $mod SHIFT, 3, movetoworkspace, 3
+bind = $mod SHIFT, 4, movetoworkspace, 4
+bind = $mod SHIFT, 5, movetoworkspace, 5
+bind = $mod SHIFT, 6, movetoworkspace, 6
+bind = $mod SHIFT, 7, movetoworkspace, 7
+bind = $mod SHIFT, 8, movetoworkspace, 8
+bind = $mod SHIFT, 9, movetoworkspace, 9
+
+# ──────────────────────────────
+# Window & Session Management
+# ──────────────────────────────
+bind = $mod SHIFT, C, killactive
+bind = $mod SHIFT, Q, exit
+bind = $mod SHIFT, SPACE, togglefloating
+bind = $mod SHIFT, Space, resizeactive, exact 1280 720
+bind = ALT, Return, fullscreen
+bind = $mod, RETURN, exec, $terminal
+bind = $mod, SPACE, exec, $menu
+bind = $mod SHIFT, X, exec, hyprlock
+
+# ──────────────────────────────
+# Window navigation 
+# ──────────────────────────────
+bind = $mod, h, movefocus, l
+bind = $mod, l, movefocus, r
+bind = $mod, k, movefocus, u
+bind = $mod, j, movefocus, d
+bind = $mod SHIFT, T, togglesplit
+bind = $mod SHIFT, h, movewindow, l
+bind = $mod SHIFT, l, movewindow, r
+bind = $mod SHIFT, k, movewindow, u
+bind = $mod SHIFT, j, movewindow, d
+
+# ──────────────────────────────
+# App Shortcuts
+# ──────────────────────────────
+bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
+bind = $mod, B, exec, $browser
+bind = $mod, E, exec, $fileManager
+bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 1; }'
+bind = $mod SHIFT, F, exec, hyprpicker
+bind = $mod, S, exec, hyprshot -o ~/Pictures/Screenshots -m output -z
+bind = $mod SHIFT, S, exec, hyprshot -o ~/Pictures/Screenshots -m region -z
+
+# ──────────────────────────────
+# Window Movement & Resizing
+# ──────────────────────────────
+bindm = $mod, mouse:272, movewindow
+bindm = $mod, mouse:273, resizewindow
+bind = $mod ALT, H, resizeactive, -20 0
+bind = $mod ALT, J, resizeactive, 0 20
+bind = $mod ALT, K, resizeactive, 0 -20
+bind = $mod ALT, L, resizeactive, 20 0
+
+# ──────────────────────────────
+# System Utilities
+# ──────────────────────────────
+bind = $mod SHIFT, D, exec, ~/.config/scripts/power-menu
+# Designated workspaces for applications
+windowrule = workspace 2 silent, class:^(zen)$
+windowrule = workspace 3 silent, class:^(vesktop)$
+windowrule = workspace 3 silent, class:^(Caprine)$
+windowrule = workspace 3 silent, class:^(chrome-messenger.com__login-Default)$
+windowrule = workspace 4 silent, class:^(Spotify)$
+windowrule = workspace 4 silent, class:^(com.obsproject.Studio)$
+windowrule = workspace 5 silent, class:^(steam)$
+windowrule = workspace 5 silent, class:^(org.vinegarhq.Sober)$
+windowrule = workspace 5 silent, class:^(io.mrarm.mcpelauncher-ui-qt)$
+
+# Stylish window/layer rules
+windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = float,class:^(swayimg)$
+windowrulev2 = size 670 625,class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = size 1280 720,class:^(swayimg)$
+windowrulev2 = noanim, class:flameshot
+windowrulev2 = float, class:flameshot
+layerrule = blur,notifications
+layerrule = blur,rofi
+layerrule = blur,logout_dialog
+layerrule = ignorealpha, rofi
+layerrule = ignorezero,notifications
+layerrule = xray 1, rofi
+windowrulev2 = opacity 0.8, class:^(nemo)$
+
+# ──────────────────────────────
+# Decorations & blur
+# ──────────────────────────────
+decoration {
+    blur {
+        enabled = true
+        size = 6
+        popups = true
+        ignore_opacity = true
+        new_optimizations = true
+    }
+    rounding = 7
+    rounding_power = 2.0
+}
+
+# ──────────────────────────────
+# Window decorations
+# ──────────────────────────────
+general {
+    gaps_in = 3
+    gaps_out = 9
+    col.active_border = rgb(eeeeee)
+    col.inactive_border = rgb(2b2b2c)
+    border_size = 2
+    layout = dwindle
+}
+dwindle {
+    pseudotile = yes
+    preserve_split = yes
+}
+
+# ──────────────────────────────
+# Animations
+# ──────────────────────────────
+animations {
+    enabled = true
+    bezier = wind, 0.05, 0.9, 0.1, 1.05
+    bezier = winIn, 0.1, 1.0, 0.1, 1.0
+    bezier = winOut, 0.3, -0.3, 0, 1
+    bezier = liner, 1, 1, 1, 1
+    animation = windows, 1, 6, wind, slide
+    animation = windowsIn, 1, 4, winIn
+    animation = windowsOut, 1, 2, winOut, popin 80%
+    animation = windowsMove, 1, 5, wind, slide
+    animation = border, 1, 1, liner
+    animation = borderangle, 1, 30, liner, once
+    animation = workspaces, 0, 0
+}
