--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -190,8 +190,8 @@ animations {
     bezier = wind, 0.05, 0.9, 0.1, 1.05
     bezier = winIn, 0.1, 1.0, 0.1, 1.0
     bezier = winOut, 0.3, -0.3, 0, 1
+    bezier = easeOutCirc, 0.0, 0.55, 0.45, 1.0
     bezier = liner, 1, 1, 1, 1
-    animation = windows, 1, 6, wind, slide
     animation = windowsIn, 1, 4, winIn
     animation = windowsOut, 1, 2, winOut, popin 80%
     animation = windowsMove, 1, 5, wind, slide
