Added polkit agent to pkgs

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -21,7 +21,7 @@ label {
     text = $TIME12
     color = $accent
     font_size = 60
-    font_family = Rubik
+    font_family = Roboto
     position = -27, 0
     halign = right
     valign = top
