--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,8 +1,8 @@
 # Utilities
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = /usr/lib/hyprpolkitagent
 exec-once = gsettings set org.gnome.desktop.wm.preferences button-layout ':'
-exec-once = ~/.config/scripts/power-saver
-exec-once = hyprctl setcursor Bibata-Modern-Classic 24 
+exec-once = ~/.config/scripts/power-saver;
+exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 
 # Startup applications
 exec-once = waybar
@@ -194,7 +194,7 @@ animations {
     bezier = liner, 1, 1, 1, 1
     animation = windowsIn, 1, 4, winIn
     animation = windowsOut, 1, 2, winOut, popin 80%
-    animation = windowsMove, 1, 5, wind, slide
+    animation = windowsMove, 1, 4, wind
     animation = border, 1, 1, liner
     animation = borderangle, 1, 30, liner, once
     animation = workspaces, 0, 0
