Changed geometry in lf.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -2,9 +2,11 @@
 exec-once = /usr/lib/hyprpolkitagent
 exec-once = gsettings set org.gnome.desktop.wm.preferences button-layout ':'
 exec-once = ~/.config/scripts/power-saver;
-exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 
 # Startup applications
+exec-once = hyprctl setcursor Bibata-Modern-Classic 24
+env = HYPRCURSOR_THEME,Bibata-Modern-Classic
+env = HYPRCURSOR_SIZE,24
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = mako
