--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -1,6 +1,7 @@
 $accent = rgb(eeeeee)
 $accentAlpha = rgb(eeeeee)
-$font = JetBrainsMono Nerd Font Mono
+$text = rgb(eeeeee)
+$font = Rubik
 
 # GENERAL
 general {
@@ -20,8 +21,8 @@ label {
     monitor =
     text = $TIME12
     color = $accent
-    font_size = 60
-    font_family = Roboto
+    font_size = 52
+    font_family = $font
     position = -27, 0
     halign = right
     valign = top
@@ -34,7 +35,7 @@ label {
     color = $text
     font_size = 20
     font_family = $font
-    position = -30, -95
+    position = -30, -90
     halign = right
     valign = top
 }
@@ -67,10 +68,10 @@ input-field {
     placeholder_text = Logged in as $USER
     hide_input = false
     check_color = $accent
-    fail_color = $red
+    fail_color = rgb(865054)
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
-    font_family = JetBrainsMono Nerd Font
-    capslock_color = $yellow
+    font_family = JetbrainsMono Nerd Font Mono
+    capslock_color = rgb(a4965f)
     position = 0, -35
     halign = center
     valign = center
