Added hover colors on workspaces in waybar.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -2,11 +2,13 @@
 exec-once = /usr/lib/hyprpolkitagent
 exec-once = gsettings set org.gnome.desktop.wm.preferences button-layout ':'
 exec-once = ~/.config/scripts/power-saver;
+env = HYPRCURSOR_THEME,Bibata-Modern-Classic
+env = HYPRCURSOR_SIZE,24
+env = XCURSOR_THEME,Bibata-Modern-Classic
+env = XCURSOR_SIZE,24
 
 # Startup applications
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
-env = HYPRCURSOR_THEME,Bibata-Modern-Classic
-env = HYPRCURSOR_SIZE,24
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = mako
@@ -31,9 +33,9 @@ input {
     force_no_accel = true
 }
 
-############################
-#     DEFAULT PROGRAMS     #
-############################
+# ──────────────────────────────
+# Default apps
+# ──────────────────────────────
 $mod = SUPER
 $terminal = footclient
 $fileManager = nemo
