--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -6,7 +6,12 @@ general.import = [
 size = 13.15
 builtin_box_drawing = true 
 
+[cursor]
+style = { shape = "Block", blinking = "On" }
+blink_interval = 500
+blink_timeout = 5
+
 [window]
-padding.x = 6
-padding.y = 6
+padding.x = 5
+padding.y = 5
 opacity = 0.8
