--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -1,17 +1,22 @@
 # Font configuration
-font=JetBrainsMono Nerd Font Mono:weight=regular:size=13.15
-font-bold=JetBrainsMono Nerd Font Mono:weight=bold:size=13.15
-font-italic=JetBrainsMono Nerd Font Mono:weight=regular:slant=italic:size=13.15
-font-bold-italic=JetBrainsMono Nerd Font Mono:weight=bold:slant=italic:size=13.15
-pad=5x5 center
+font = JetBrainsMono Nerd Font Mono:weight=regular:size=13.15
+font-bold = JetBrainsMono Nerd Font Mono:weight=bold:size=13.15
+font-italic = JetBrainsMono Nerd Font Mono:weight=regular:slant=italic:size=13.15
+font-bold-italic = JetBrainsMono Nerd Font Mono:weight=bold:slant=italic:size=13.15
 
-[main]
-gamma-correct-blending=no
+# Monitor configuration
+pad = 5x5 center
+dpi-aware = no
 
+# Scrollback configuration
 [scrollback]
 indicator-position = none
 
+
 # Colorscheme
+[main]
+gamma-correct-blending= no
+
 [colors]
 alpha = 0.8
 foreground = eeeeee
