Removed specified height on waybar and just made it a margin.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -129,6 +129,7 @@ bind = $mod ALT, L, resizeactive, 20 0
 # System Utilities
 # ──────────────────────────────
 bind = $mod SHIFT, D, exec, ~/.config/scripts/power-menu
+
 # Designated workspaces for applications
 windowrule = workspace 2 silent, class:^(zen)$
 windowrule = workspace 3 silent, class:^(vesktop)$
@@ -153,6 +154,7 @@ layerrule = blur,logout_dialog
 layerrule = ignorealpha, rofi
 layerrule = ignorezero,notifications
 layerrule = xray 1, rofi
+windowrulev2 = opacity 0.8, class:^(nemo)$
 
 # ──────────────────────────────
 # Decorations & blur
