Made colors on GTK theme a little bit more blue.

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -20,7 +20,7 @@ gamma-correct-blending= no
 [colors]
 alpha = 0.8
 foreground = eeeeee
-background = 1c1c1c
+background = 1e1e20
 regular0 = 353535
 regular1 = 865054
 regular2 = 5f7a5f
