--- a/fastfetch/.config/fastfetch/config.jsonc
+++ b/fastfetch/.config/fastfetch/config.jsonc
@@ -2,7 +2,7 @@
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "display": {
         "color": {
-            "keys": "cyan"
+            "keys": "blue"
         },
         "separator": " "
     },
@@ -10,7 +10,7 @@
     "logo": {
         "source": "/home/joaquin/.config/fastfetch/logo.txt",
         "color": {
-            "1": "blue",
+            "1": "cyan",
         }
     },
 
