--- a/kitty/.config/kitty/current-theme.conf
+++ b/kitty/.config/kitty/current-theme.conf
@@ -1,4 +1,4 @@
-background                #191919
+background                #1e1e20
 foreground                #eeeeee
 selection_background      #323232
 selection_foreground      none
@@ -10,7 +10,7 @@ active_tab_background     #454545
 active_tab_foreground     #eeeeee
 inactive_tab_background   #252525
 inactive_tab_foreground   #b0b0b0
-color0                    #1c1c1c
+color0                    #1e1e20
 color1                    #865054
 color2                    #5f7a5f
 color3                    #a4965f
