darkened the wallpaper by 15%.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -162,7 +162,8 @@ windowrulev2 = opacity 0.8, class:^(nemo)$
 decoration {
     blur {
         enabled = true
-        size = 5
+        size = 6
+        passes = 1
         popups = true
         ignore_opacity = true
         new_optimizations = true
