Updated window layouts on hyprland.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -176,6 +176,8 @@ decoration {
 # Window decorations
 # ──────────────────────────────
 general {
+    layout = master
+    allow_tearing = false
     gaps_in = 3
     gaps_out = 9
     col.active_border = rgb(eeeeee)
@@ -183,9 +185,23 @@ general {
     border_size = 2
     layout = dwindle
 }
+
+# Window layouts
 dwindle {
     pseudotile = yes
     preserve_split = yes
+}
+
+master {
+    mfact = 0.5
+}
+
+gestures {
+    workspace_swipe = off
+}
+
+misc {
+    force_default_wallpaper = 0
 }
 
 # ──────────────────────────────
