Added an even bigger border radius around the waybar modules.

--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -62,7 +62,7 @@ input-field {
     dots_spacing = 0.2
     dots_center = true
     outer_color = rgb(eeeeee)
-    inner_color = rgb(1c1c1c)
+    inner_color = rgb(1e1e20)
     font_color = rgb(eeeeee)
     fade_on_empty = false
     placeholder_text = Logged in as $USER
