Made the waybar border radius 10 rather than 24.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -85,7 +85,7 @@ bind = $mod SHIFT, 9, movetoworkspace, 9
 bind = $mod SHIFT, C, killactive
 bind = $mod SHIFT, Q, exit
 bind = $mod SHIFT, SPACE, togglefloating
-bind = $mod SHIFT, Space, resizeactive, exact 1280 720
+bind = $mod SHIFT, SPACE, resizeactive, exact 1280 720
 bind = ALT, Return, fullscreen
 bind = $mod, RETURN, exec, $terminal
 bind = $mod, SPACE, exec, $menu
