Added some configuration changes to mako.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,7 +1,9 @@
 # Utilities
 exec-once = /usr/lib/hyprpolkitagent
 exec-once = gsettings set org.gnome.desktop.wm.preferences button-layout ':'
-exec-once = ~/.config/scripts/power-saver;
+exec-once = ~/.config/scripts/power-saver
+exec-once = ~/.config/scripts/battery-charge
+exec-once = ~/.config/scripts/battery-crit
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_THEME,Bibata-Modern-Classic
