Disabled animations and changed background of rofi.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -164,8 +164,7 @@ windowrulev2 = opacity 0.8, class:^(nemo)$
 decoration {
     blur {
         enabled = true
-        size = 6
-        passes = 1
+        size = 5
         popups = true
         ignore_opacity = true
         new_optimizations = true
@@ -210,7 +209,7 @@ misc {
 # Animations
 # ──────────────────────────────
 animations {
-    enabled = true
+    enabled = false
     bezier = wind, 0.05, 0.9, 0.1, 1.05
     bezier = winIn, 0.1, 1.0, 0.1, 1.0
     bezier = winOut, 0.3, -0.3, 0, 1
