Changed color of shortcut keys in neovim dashboard.

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -21,7 +21,7 @@ gamma-correct-blending= no
 alpha = 0.8
 foreground = eeeeee
 background = 1e1e20
-regular0 = 353535
+regular0 = 1e1e20
 regular1 = 865054
 regular2 = 5f7a5f
 regular3 = a4965f
@@ -29,7 +29,7 @@ regular4 = 5f7a8c
 regular5 = 75607a
 regular6 = 6a8b8b
 regular7 = eeeeee
-bright0 = 666666
+bright0 = 656565
 bright1 = 976061
 bright2 = 729a72
 bright3 = a49a72
