--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -28,6 +28,7 @@ exec-once = brightnessctl set 80%
 # Device configurations
 # ──────────────────────────────
 input {
+    kb_options = caps:escape
     touchpad {
         natural_scroll = true
     }
@@ -210,15 +211,15 @@ misc {
 # ──────────────────────────────
 animations {
     enabled = false
-    bezier = wind, 0.05, 0.9, 0.1, 1.05
-    bezier = winIn, 0.1, 1.0, 0.1, 1.0
-    bezier = winOut, 0.3, -0.3, 0, 1
-    bezier = easeOutCirc, 0.0, 0.55, 0.45, 1.0
-    bezier = liner, 1, 1, 1, 1
-    animation = windowsIn, 1, 3, winIn
-    animation = windowsOut, 1, 2, winOut, popin 80%
-    animation = windowsMove, 1, 4, wind
-    animation = border, 1, 1, liner
-    animation = borderangle, 1, 30, liner, once
-    animation = workspaces, 0, 0
+    # bezier = wind, 0.05, 0.9, 0.1, 1.05
+    # bezier = winIn, 0.1, 1.0, 0.1, 1.0
+    # bezier = winOut, 0.3, -0.3, 0, 1
+    # bezier = easeOutCirc, 0.0, 0.55, 0.45, 1.0
+    # bezier = liner, 1, 1, 1, 1
+    # animation = windowsIn, 1, 2, winIn
+    # animation = windowsOut, 0, 8
+    # animation = windowsMove, 1, 2, default
+    # animation = border, 1, 1, liner
+    # animation = borderangle, 1, 30, liner, once
+    # animation = workspaces, 0, 0
 }
