Added animations back in, and disabled workspace animations.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -170,7 +170,7 @@ decoration {
         ignore_opacity = true
         new_optimizations = true
     }
-    rounding = 8
+    rounding = 7
     rounding_power = 2.0
 }
 
@@ -210,16 +210,15 @@ misc {
 # Animations
 # ──────────────────────────────
 animations {
-    enabled = false
-    # bezier = wind, 0.05, 0.9, 0.1, 1.05
-    # bezier = winIn, 0.1, 1.0, 0.1, 1.0
-    # bezier = winOut, 0.3, -0.3, 0, 1
-    # bezier = easeOutCirc, 0.0, 0.55, 0.45, 1.0
-    # bezier = liner, 1, 1, 1, 1
-    # animation = windowsIn, 1, 2, winIn
-    # animation = windowsOut, 0, 8
-    # animation = windowsMove, 1, 2, default
-    # animation = border, 1, 1, liner
-    # animation = borderangle, 1, 30, liner, once
-    # animation = workspaces, 0, 0
+    enabled = true
+    bezier = wind, 0.05, 0.9, 0.1, 1.05
+    bezier = winIn, 0.1, 1.0, 0.1, 1.0
+    bezier = winOut, 0.3, -0.3, 0, 1
+    bezier = liner, 1, 1, 1, 1
+    animation = windowsIn, 1, 3, winIn
+    animation = windowsOut, 1, 2, winOut, popin 80%
+    animation = windowsMove, 1, 3, wind
+    animation = border, 1, 1, liner
+    animation = borderangle, 1, 30, liner, once
+    animation = workspaces, 0, 0
 }
