Changed a lot of things in the Adwaita-Mono theme.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -41,7 +41,7 @@ input {
 # ──────────────────────────────
 $mod = SUPER
 $terminal = footclient
-$fileManager = nemo
+$fileManager = GTK_THEME=jqnMono:dark nemo
 $fileManager-alt = footclient -e lf
 $browser = zen-browser
 $menu = rofi -disable-history -show drun
