Changed border colors; disabled blur and animations.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -3,6 +3,7 @@ exec-once = /usr/lib/hyprpolkitagent
 exec-once = ~/.config/scripts/power-saver
 exec-once = ~/.config/scripts/battery-charge
 exec-once = ~/.config/scripts/battery-crit
+exec-once = gsettings set org.gnome.desktop.wm.preferences button-layout ':'
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_THEME,Bibata-Modern-Classic
@@ -40,7 +41,7 @@ input {
 # ──────────────────────────────
 $mod = SUPER
 $terminal = footclient
-$fileManager = nautilus
+$fileManager = nemo
 $fileManager-alt = footclient -e lf
 $browser = zen-browser
 $menu = rofi -disable-history -show drun
@@ -145,6 +146,7 @@ windowrule = workspace 5 silent, class:^(io.mrarm.mcpelauncher-ui-qt)$
 
 # Stylish window/layer rules
 windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
+# windowrulev2 = opacity 0.8,class:^(nemo)$
 windowrulev2 = float,class:^(swayimg)$
 windowrulev2 = size 680 625,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 1280 720,class:^(swayimg)$
@@ -161,7 +163,7 @@ layerrule = ignorezero,notifications
 # ──────────────────────────────
 decoration {
     blur {
-        enabled = true
+        enabled = false
         size = 5
         popups = true
         ignore_opacity = true
@@ -179,8 +181,8 @@ general {
     allow_tearing = false
     gaps_in = 3
     gaps_out = 9
-    col.active_border = rgb(eeeeee)
-    col.inactive_border = rgb(2b2b2c)
+    col.active_border = rgb(909092)
+    col.inactive_border = rgb(1f2022)
     border_size = 2
 }
 # Layouts
@@ -205,7 +207,7 @@ misc {
 # Animations
 # ──────────────────────────────
 animations {
-    enabled = true
+    enabled = false
     bezier = wind, 0.05, 0.9, 0.1, 1.05
     bezier = winIn, 0.1, 1.0, 0.1, 1.0
     bezier = winOut, 0.3, -0.3, 0, 1
