Changed the color of the border and changed up the gaps out size.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -146,7 +146,7 @@ windowrule = workspace 5 silent, class:^(io.mrarm.mcpelauncher-ui-qt)$
 
 # Stylish window/layer rules
 windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
-# windowrulev2 = opacity 0.8,class:^(nemo)$
+# windowrulev2 = opacity 0.85,class:^(nemo)$
 windowrulev2 = float,class:^(swayimg)$
 windowrulev2 = size 680 625,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 1280 720,class:^(swayimg)$
@@ -164,7 +164,7 @@ layerrule = ignorezero,notifications
 decoration {
     blur {
         enabled = false
-        size = 5
+        size = 2
         popups = true
         ignore_opacity = true
         new_optimizations = true
@@ -180,9 +180,9 @@ general {
     layout = dwindle
     allow_tearing = false
     gaps_in = 3
-    gaps_out = 9
-    col.active_border = rgb(909092)
-    col.inactive_border = rgb(1f2022)
+    gaps_out = 8
+    col.active_border = rgb(5b5d62)
+    col.inactive_border = rgb(151517)
     border_size = 2
 }
 # Layouts
