--- a/mako/.config/mako/config
+++ b/mako/.config/mako/config
@@ -2,7 +2,7 @@ layer=overlay
 margin=5,5,5,10
 text-alignment=center
 default-timeout=3000
-background-color=#1e1e20CC
+background-color=#1e1e20
 border-color=#3f4044
 border-radius=7
 font=Rubik, JetBrainsMono Nerd Font 13
