Removed the AdwSteamGtk config.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -145,8 +145,8 @@ windowrule = workspace 5 silent, class:^(org.vinegarhq.Sober)$
 windowrule = workspace 5 silent, class:^(io.mrarm.mcpelauncher-ui-qt)$
 
 # Stylish window/layer rules
+windowrulev2 = noshadow, focus:0
 windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
-# windowrulev2 = opacity 0.85,class:^(nemo)$
 windowrulev2 = float,class:^(swayimg)$
 windowrulev2 = size 680 625,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 1280 720,class:^(swayimg)$
