Changed window layouts on hyprland to master.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -113,7 +113,7 @@ bind = $mod SHIFT, j, movewindow, d
 bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
 bind = $mod, B, exec, $browser
 bind = $mod, E, exec, $fileManager
-bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 1; }'
+bind = $mod, PERIOD, exec, rofi -modi emoji -show emoji -theme-str 'listview { columns: 2; }'
 bind = $mod SHIFT, F, exec, hyprpicker
 bind = $mod, S, exec, hyprshot -o ~/Pictures/Screenshots -m output -z
 bind = $mod SHIFT, S, exec, hyprshot -o ~/Pictures/Screenshots -m region -z
@@ -145,6 +145,7 @@ windowrule = workspace 5 silent, class:^(org.vinegarhq.Sober)$
 windowrule = workspace 5 silent, class:^(io.mrarm.mcpelauncher-ui-qt)$
 
 # Stylish window/layer rules
+# windowrulev2 = opacity 0.8,class:^(nemo)$
 windowrulev2 = noshadow, focus:0
 windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = float,class:^(swayimg)$
@@ -164,7 +165,7 @@ layerrule = ignorezero,notifications
 decoration {
     blur {
         enabled = false
-        size = 2
+        size = 3
         popups = true
         ignore_opacity = true
         new_optimizations = true
@@ -177,10 +178,10 @@ decoration {
 # Window decorations
 # ──────────────────────────────
 general {
-    layout = dwindle
+    layout = master
     allow_tearing = false
     gaps_in = 3
-    gaps_out = 8
+    gaps_out = 9
     col.active_border = rgb(5b5d62)
     col.inactive_border = rgb(151517)
     border_size = 2
@@ -212,7 +213,7 @@ animations {
     bezier = winIn, 0.1, 1.0, 0.1, 1.0
     bezier = winOut, 0.3, -0.3, 0, 1
     bezier = liner, 1, 1, 1, 1
-    animation = windowsIn, 1, 3, winIn
+    animation = windowsIn, 1, 2, winIn
     animation = windowsOut, 1, 2, winOut, popin 80%
     animation = windowsMove, 1, 3, wind
     animation = border, 1, 1, liner
