Replaced nautilus with nemo again.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -72,6 +72,7 @@ bind = $mod, 6, workspace, 6
 bind = $mod, 7, workspace, 7
 bind = $mod, 8, workspace, 8
 bind = $mod, 9, workspace, 9
+bind = $mod, 0, workspace, 10
 bind = $mod SHIFT, 1, movetoworkspace, 1
 bind = $mod SHIFT, 2, movetoworkspace, 2
 bind = $mod SHIFT, 3, movetoworkspace, 3
@@ -81,6 +82,7 @@ bind = $mod SHIFT, 6, movetoworkspace, 6
 bind = $mod SHIFT, 7, movetoworkspace, 7
 bind = $mod SHIFT, 8, movetoworkspace, 8
 bind = $mod SHIFT, 9, movetoworkspace, 9
+bind = $mod SHIFT, 0, movetoworkspace, 10
 
 # ──────────────────────────────
 # Window & Session Management
@@ -145,7 +147,6 @@ windowrule = workspace 5 silent, class:^(org.vinegarhq.Sober)$
 windowrule = workspace 5 silent, class:^(io.mrarm.mcpelauncher-ui-qt)$
 
 # Stylish window/layer rules
-# windowrulev2 = opacity 0.8,class:^(nemo)$
 windowrulev2 = noshadow, focus:0
 windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = float,class:^(swayimg)$
