--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -3,7 +3,6 @@ exec-once = /usr/lib/hyprpolkitagent
 exec-once = ~/.config/scripts/power-saver
 exec-once = ~/.config/scripts/battery-charge
 exec-once = ~/.config/scripts/battery-crit
-exec-once = gsettings set org.gnome.desktop.wm.preferences button-layout ':'
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_THEME,Bibata-Modern-Classic
@@ -90,6 +89,7 @@ bind = $mod SHIFT, 0, movetoworkspace, 10
 bind = $mod SHIFT, C, killactive
 bind = $mod SHIFT, Q, exit
 bind = $mod SHIFT, SPACE, togglefloating
+bind = $mod SHIFT, SPACE, centerwindow
 bind = $mod SHIFT, SPACE, resizeactive, exact 1280 720
 bind = ALT, Return, fullscreen
 bind = $mod, RETURN, exec, $terminal
@@ -148,9 +148,7 @@ windowrule = workspace 5 silent, class:^(io.mrarm.mcpelauncher-ui-qt)$
 
 # Stylish window/layer rules
 windowrulev2 = noshadow, focus:0
-windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = float,class:^(swayimg)$
-windowrulev2 = size 680 625,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 1280 720,class:^(swayimg)$
 windowrulev2 = noanim, class:flameshot
 windowrulev2 = float, class:flameshot
