Brightened the Adwaita-Mono GTk colors a bit.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -112,6 +112,7 @@ bind = $mod SHIFT, j, movewindow, d
 # ──────────────────────────────
 # App Shortcuts
 # ──────────────────────────────
+bind = SUPER SHIFT, D, exec, makoctl dismiss
 bind = ALT SHIFT, V, pass, class:^(com\.obsproject\.Studio)$
 bind = $mod, B, exec, $browser
 bind = $mod, E, exec, $fileManager
@@ -133,7 +134,7 @@ bind = $mod ALT, L, resizeactive, 20 0
 # ──────────────────────────────
 # System Utilities
 # ──────────────────────────────
-bind = $mod SHIFT, D, exec, ~/.config/scripts/power-menu
+bind = CTRL ALT, DELETE, exec, ~/.config/scripts/power-menu
 
 # Designated workspaces for applications
 windowrule = workspace 2 silent, class:^(zen)$
