--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -150,12 +150,7 @@ windowrule = workspace 5 silent, class:^(io.mrarm.mcpelauncher-ui-qt)$
 # Stylish window/layer rules
 windowrulev2 = noshadow, focus:0
 windowrulev2 = float,class:^(swayimg)$
-windowrulev2 = size 1280 720,class:^(swayimg)$
-windowrulev2 = noanim, class:flameshot
-windowrulev2 = float, class:flameshot
-layerrule = blur,notifications
-layerrule = blur,rofi
-layerrule = blur,logout_dialog
+windowrulev2 = float,class:^(imv)$
 layerrule = ignorealpha, rofi
 layerrule = ignorezero,notifications
 
