Re-added back blur, but animations are overrated so well.. off for now.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -8,6 +8,13 @@ env = HYPRCURSOR_SIZE,24
 env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,24
 
+# Environmental variables
+env = SDL_VIDEODRIVER,wayland
+env = _JAVA_AWT_WM_NONPARENTING,1
+env = QT_QPA_PLATFORM,wayland
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_DESKTOP,Hyprland
+
 # Startup applications
 exec-once = hyprctl setcursor Bibata-Modern-Classic 24
 exec-once = waybar
@@ -159,7 +166,7 @@ layerrule = ignorezero,notifications
 # ──────────────────────────────
 decoration {
     blur {
-        enabled = false
+        enabled = true
         size = 4
         popups = true
         ignore_opacity = true
