Blur disabled again. Didn't like it as much as i thought.

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -166,7 +166,7 @@ layerrule = ignorezero,notifications
 # ──────────────────────────────
 decoration {
     blur {
-        enabled = true
+        enabled = false
         size = 4
         popups = true
         ignore_opacity = true
